k8s/flask-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app
  namespace: flask-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "flask-app.local"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: flask-app
                port:
                  number: 5000
